2008-02-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Addded an option to leave the enter/exit messages
	plain. Option is on the options dialog page.

2008-02-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Avoid applying bad colours from the rc file too.

2008-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added checking of colour info before recording it
	for a user and validate colors read from the network.

2008-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed tkchat home url's to tkchat.tcl.tk
	Fixed some dodgy jid processing when changing nicks.
	* tkchat.tcl: Alerts to be tied to the alerting window.
	Added some caps as extras to the presence stanzas.

2008-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* choosefont/critcl.tcl: Fix fallback to tcl for platforms with no
	pre-built binary.
	* tkchat.tcl: Fixed /font to call the choosefont dialog if available
	Also attempting to limit nick length.
	
2007-12-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Broadcast presence changes to the xmpp server to
	ensure that roster contacts and notified as well as MUC members.
	* choosefont/critcl.tcl: critcl stuff moved to critcl2 which uses
	8.5 compatible platform testing code.

2007-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed erroneous handling of 404 error condition.
	Added some extra checks for the existence of nick colours.

2007-10-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enabled status bar in the absence of ttk widgets

2007-10-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Use asynchronous connect to avoid blocking
	when reconnecting the stream (interrupts the audio).

2007-10-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Display images from the VCARD if present.
	* tkchat_mjpeg.tcl: Fix namespace of addStatus call.
